5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1638_652.log
== TEST (2019-04-09 13:48:19) 
-- CODE:
a = int(input("numero de 3 digitos:"))

x = a//100
y = a//10%10
z = a%10

print(x,y,z)
-- OUTPUT:
7 2 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:48:28) 
-- CODE:
a = int(input("numero de 3 digitos:"))

x = a//100
y = a//10%10
z = a%10

print(x,y,z)
-- OUTPUT:
7 2 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:49:24) 
-- CODE:
a = int(input("numero de 3 digitos:"))

x = a//100
y = a//10


print(y,z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(y,z)
NameError: name 'z' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:49:53) 
-- CODE:
a = int(input("numero de 3 digitos:"))

x = a//100
y = a//10


print(x,y)
-- OUTPUT:
7 72
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:50:25) 
-- CODE:
a = int(input("numero de 3 digitos:"))

x = a//100
y = a%100


print(x,y)
-- OUTPUT:
7 28
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:53:07) 
-- CODE:
a = int(input("numero de 3 digitos:"))

x = a//100
y = a%100

if(y%x == 0)
	print("SIM")
else:
	print("NAO")
-- ERROR:
File "XXXX", line 6
    if(y%x == 0)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:53:15) 
-- CODE:
a = int(input("numero de 3 digitos:"))

x = a//100
y = a%100

if(y%x == 0):
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:53:29) 
-- CODE:
a = int(input("numero de 3 digitos:"))

x = a//100
y = a%100

if(y%x == 0):
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:53:48) 
-- CODE:
a = int(input("numero de 3 digitos:"))

x = a//100
y = a%100

if(y%x == 0):
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:54:36) 
-- CODE:
a = int(input("numero de 3 digitos:"))

x = a//100
y = a%100

if(a%y == 0):
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:54:43) 
-- CODE:
a = int(input("numero de 3 digitos:"))

x = a//100
y = a%100

if(a%y == 0):
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 13:54:51) 
-- CODE:
a = int(input("numero de 3 digitos:"))

x = a//100
y = a%100

if(a%y == 0):
	print("SIM")
else:
	print("NAO")
-- EXECUTION TIME:
0.166974
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:42:44) 
-- CODE:
a = int(input("numero de 3 digitos:"))

x = a//100
y = a%100

if(a%y == 0):
	print("SIM")
else:
	print("NAO")
-- EXECUTION TIME:
0.157798
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
